...
        <View style={styles.actionsRow}>
          <Button
            onPress={() => router.push('/(tabs)/lightning/paymentSend')}
            style={{ flex: 1 }}
            tintColor={alpha(colors.primary, 0.9)}
          >
            <Text style={styles.buttonText}>Enviar</Text>
          </Button>

          <Button
            onPress={() => router.push('/(tabs)/lightning/paymentReceive')}
            style={{ flex: 1 }}
          >
            <Text
              style={[
                styles.buttonTextSecondary,
                colorMode === 'dark' && styles.buttonTextSecondaryDark,
              ]}
            >
              Receber
            </Text>
          </Button>
        </View>

        {/* Channel Actions */}
        <View style={styles.actionsRow}>
...
